add public file

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,15 @@
 extends layout
-
 block content
-  h1= title
-  p Welcome to #{title}
+	h1= title
+	p Welcome to #{title}
+	div.box
+		div.count find 
+			span 0 
+			| ghost
+		div.remain-time 
+			span 60
+			| s
+		ul.clearfix
+			li.pull-left.iconfont.icon-yumibingtacos
+			li.pull-left.iconfont.icon-yumibingtacos
+			li.pull-left.iconfont.icon-yumibingtacos
