--- a/public/fonts/iconfont.css
+++ b/public/fonts/iconfont.css
@@ -1,52 +1,10 @@
-* {
-	margin: 0px;
-	padding: 0px;
-}
-body {
-  font: 12px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: #7cac95;
-  color: #fff;
-}
 
-a {
-  color: #00B7FF;
-}
-ul,
-li {
-	list-style: none;
-}
-
-.box {
-	padding: 10px;
-}
-.box ul li {
-	padding: 10px;
-	font-size: 30px;
-}
-.clearfix:before,
-.clearfix:after {
-	display: table;
-    content: " ";
-}
-.clearfix:after {
-	clear: both;
-}
-.pull-left {
-	float: left;
-}
-.pull-right {
-	float: right;
-}
-
-
-
-/*font-style*/
 @font-face {font-family: "iconfont";
-  src: url('../fonts/iconfont.eot?t=1467094975'); /* IE9*/
-  src: url('../fonts/iconfont.eot?t=1467094975#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/iconfont.woff?t=1467094975') format('woff'), /* chrome, firefox */
-  url('../fonts/iconfont.ttf?t=1467094975') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('../fonts/iconfont.svg?t=1467094975#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1467094975'); /* IE9*/
+  src: url('iconfont.eot?t=1467094975#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1467094975') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1467094975') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1467094975#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
