--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,9 @@
 doctype html
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+	head
+		title= title
+		meta(charset="utf-8")
+		meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
+		link(rel='stylesheet', href='/stylesheets/style.css')
+	body
+		block content
